# leetcode

Cprojekt/CSimpleThreadPool/: CSimpleThreadPool.c  CSimpleThreadPool.h  main.c
Cprojekt/L01/: CMakeLists.txt  main.cpp
Cprojekt/LC03/: CMakeLists.txt  main.cpp
Cprojekt/Leetcodes/: CMakeLists.txt  main.cpp  solution.cpp  solution.h
Cprojekt/Leetcodes/Solutions/: CMakeLists.txt  LC04.cpp  LC05.cpp  LC05.h  LC06.cpp  LC06.h  LC07.cpp  LC08.cpp  solution.h
